--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
                 class="bg-[#1f3f39] text-white px-[32px] py-[12px] rounded-[30px] text-[15px] transition duration-300 hover:bg-[#295e55]">Login</button>
         </div>
     </header>
+    <section class="sc1 w-[1200px] bg-[#E9FBF9] h-[500px] flex m-auto rounded-[20px] px-[80px] py-[50px]">
+        <div class="left w-[500px]  h-[430px]">
+            <p class="bg-[white] text-amber-400 w-20 h-7 flex items-center justify-center rounded-[10px]">it works!</p>
+            <h1 class="text-[50px] font-bold">Try Our Business Ideas to grow Rapidly</h1>
+            <p class="text-[20px]">We understand how desperatly you want to grow in the business world & our motto is to
+                help you with practicale idea and plan </p>
+            <div class="but flex items-center">
+                <button class="bg-[orange] text-white px-[32px] py-[12px] rounded-[30px] text-[15px] ">Get
+                    Started</button>
+                <button class="flex items-center text-amber-500"><img src="Group 9.png" alt="">DEMO VIDEO</button>
+            </div>
+        </div>
+        <div class="right  w-[500px] h-[450px]">
+            <img class="mt-[48px] w-[750px] h-[400px]" src="pleased-satisfied-2-removebg 1.png" alt="">
+            <img class="w-[300px] absolute mt-[-190px] ml-[-50px]" src="Group 8.png" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
