--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
             <img class="w-[300px] absolute mt-[-190px] ml-[-50px]" src="Group 8.png" alt="">
         </div>
     </section>
+    <div class="sc2 py-12 mt-[100px] mb-[100px] ">
+        <div class="max-w-6xl mx-auto px-4">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Rectangle 161.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Rectangle 164.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="image 35.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Rectangle 162.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Rectangle 163.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Group 191.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="Ellipse 91.png" alt="">
+                </div>
+
+                <div class="h-28 bg-[#F1FAF9] rounded-[12px] flex items-center justify-center">
+                    <img src="image 36.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     
 </body>
 </html>
