--- a/index.html
+++ b/index.html
@@ -82,6 +82,71 @@
 
         </div>
     </div>
+    <div class="sc3 py-20">
+        <div class="max-w-6xl mx-auto px-6">
+            <section class="flex flex-col md:flex-row md:justify-between md:items-start gap-10 mb-16">
+
+                <div class="max-w-[576px]">
+                    <span class="text-xs  text-orange-500 uppercase font-semibold">
+                        Services
+                    </span>
+                    <h2 class="mt-4 text-4xl font-bold text-gray-900 leading-tight">
+                        Exactly Everything You <br />
+                        Need For Business
+                    </h2>
+                </div>
+                <p class="text-gray-600 max-w-md ">
+                    We understand how desperately you want to grow in the business world
+                    & our motto is to help you with practical idea and plan
+                </p>
+            </section>
+            <div class="flex flex-col md:flex-row gap-8">
+                <div class="flex-1 p-8 rounded-2xl bg-white ">
+                    <div class="w-14 h-14 rounded-[12px] bg-green-100 flex items-center justify-center mb-6">
+                        <img src="Vector (2).png" alt="">
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-900 mb-3">
+                        Business Growing Support
+                    </h3>
+                    <p class="text-gray-600 mb-6">
+                        Get every necessary support to grow as business startup
+                    </p>
+                    <a href="#" class="text-green-700  inline-flex items-center gap-2">
+                        Learn More →
+                    </a>
+                </div>
+                <div class="flex-1 p-8 rounded-2xl bg-white shadow-sm">
+                    <div class="w-14 h-14 rounded-[12px] bg-yellow-100 flex items-center justify-center mb-6">
+                        <img src="Vector (3).png" alt="">
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-900 mb-3">
+                        Community Attachment
+                    </h3>
+                    <p class="text-gray-600 mb-6">
+                        A lifetime attachment with the community dream
+                    </p>
+                    <a href="#"
+                        class="bg-orange-500 text-white px-6 py-3 rounded-full inline-flex items-center gap-2 text-sm font-medium">
+                        Learn More →
+                    </a>
+                </div>
+                <div class="flex-1 p-8 rounded-2xl bg-white ">
+                    <div class="w-14 h-14 rounded-[12px] bg-orange-100 flex items-center justify-center mb-6">
+                        <img src="Vector (4).png" alt="">
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-900 mb-3">
+                        Exceptional Discovery Plans
+                    </h3>
+                    <p class="text-gray-600 mb-6">
+                        An exceptional plan can take you ahead millions of step which we discover
+                    </p>
+                    <a href="#" class="text-green-700  inline-flex items-center gap-2">
+                        Learn More →
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
