--- a/index.html
+++ b/index.html
@@ -147,6 +147,149 @@
             </div>
         </div>
     </div>
+    <section class="sc4  py-[100px]">
+        <div class="max-w-[1200px] mx-auto px-[20px]">
+            <div class="flex justify-between items-start mb-[80px]">
+                <div class="max-w-[520px]">
+                    <span class="text-[12px]  text-orange-500 font-bold">
+                        Achievements
+                    </span>
+                    <h2 class="mt-[20px] text-[42px]  font-bold text-gray-900">
+                        We Worked With <span class="text-orange-500">100+</span><br>
+                        Company Over <span class="text-orange-500">10</span> Years
+                    </h2>
+                </div>
+                <div class="flex flex-col gap-[35px]">
+                    <div class="flex items-start gap-[25px]">
+                        <h3 class="text-[28px] font-bold text-gray-400 w-[90px]">9k+</h3>
+                        <p class="text-[14px]  text-green-700 w-[200px]">Completed Full Projects <br><span
+                                class="text-orange-500 text-[12px]">From 789+ Companies</span></p>
+                    </div>
+                    <div class="flex items-start gap-[25px]">
+                        <h3 class="text-[28px] font-bold text-gray-400 w-[90px]">924+</h3>
+                        <p class="text-[14px]   text-green-700 w-[200px]">
+                            Satisfingly Happy Clients <br>
+                            <span class="text-orange-500 text-[12px]">From 100+ Countries</span>
+                        </p>
+                    </div>
+                    <div class="flex items-start gap-[25px]">
+                        <h3 class="text-[28px] font-bold text-gray-400 w-[90px]">416</h3>
+                        <p class="text-[14px]   text-green-700 w-[200px]">
+                            Expertised Unit Employees <br>
+                            <span class="text-orange-500 text-[12px]">From 20+ Countries</span>
+                        </p>
+                    </div>
+                    <div class="flex items-start gap-[25px]">
+                        <h3 class="text-[28px] font-bold text-gray-400 w-[90px]">3024</h3>
+                        <p class="text-[14px]   text-green-700 w-[200px]">
+                            Startups Case Studies <br>
+                            <span class="text-orange-500 text-[12px]">From 100+ Countries</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-between items-start">
+                <div class="w-[560px]">
+                    <div
+                        class="w-[560px] h-[550px] rounded-[24px] bg-[#cfe3df] flex items-center justify-center mb-[30px]">
+                        <img class="absolute mt-[204px]" src="Circle.png" alt="">
+                        <img class="absolute mt-[-48px]" src="omedic 1 (1).png" alt="">
+                    </div>
+                    <h3 class="text-[20px] font-semibold mb-[15px]">
+                        JobHub Job Finding Website
+                    </h3>
+                    <p class="text-[14px]  text-gray-600 mb-[25px] w-[480px]">
+                        This website has become one of the best ux interface for users with
+                        an beautiful ui and also lucrative fot upcoming startups in the sectors beautiful ui and also
+                        lucrative fot upcoming
+                    </p>
+                    <a href="#"
+                        class="inline-block bg-orange-500 text-white text-[14px] px-[28px] py-[12px] rounded-full">
+                        View More Work →
+                    </a>
+                </div>
+                <div class="w-[560px] mt-[80px]">
+                    <div
+                        class="w-[560px] h-[550px] rounded-[24px] bg-[#efe5df] flex items-center justify-center mb-[30px]">
+                        <img class="mt-[224px]" src="Circle (1).png" alt="">
+                        <img class="absolute mt-[-25px]" src="Cent Online Payment 1.png" alt="">
+                    </div>
+                    <h3 class="text-[20px] font-bold mb-[15px]">
+                        CENT - Payment App Landing Website
+                    </h3>
+                    <p class="text-[14px] text-gray-600 w-[480px]">
+                        This website has become one of the best ux interface for users with
+                        an beautiful ui and also lucrative fot upcoming startups in the sectors
+                        beautiful ui and also lucrative fot upcoming
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sc5 w-full  pt-[80px] pb-[100px] px-[120px]">
+        <div class="w-full text-center mb-[20px]"><span class="text-[14px] text-[#f97316] ">blog</span>
+        </div>
+        <div class="w-full text-center mb-[20px]">
+            <h2 class="text-[42px] font-bold text-[#0f2e2c]">We Publish Blogs Every Week </h2>
+        </div>
+        <div class="w-full text-center mb-[60px]">
+            <p class="text-[16px] text-[#6b7280] ">We understand how desperately you want to grow in the business world
+                & our motto<br />is to help you with practical idea and plan</p>
+        </div>
+        <div class="flex justify-center gap-[40px]">
+            <div class="w-[520px] bg-gray-100 rounded-[16px] ">
+                <div class="w-full h-[300px] relative">
+                    <img src="Rectangle 176.png" class="w-full h-full object-cover" />
+                    <div
+                        class="absolute top-[20px] right-[20px] mt-[-35px] mr-[-35px] bg-[#0f2e2c] text-white text-center rounded-[8px] px-[14px] py-[10px]">
+                        <div class="text-[16px] font-bold ">22</div>
+                        <div class="text-[12px]">Dec</div>
+                    </div>
+                </div>
+                <div class="p-[30px]">
+                    <div class="text-[20px] font-bold text-[#111827] mb-[16px]">
+                        <p> Upgrowing Economy Needs More Startups</p>
+                    </div>
+
+                    <div class="text-[15px] text-[#6b7280] mb-[25px]">
+                        <p>We understand how desperately you want to grow in the business world</p>
+                        <p>& our motto is to help you with practical idea and plan</p>
+                    </div>
+                    <div
+                        class="inline-flex items-center bg-[#f97316] text-white text-[14px] font-medium px-[24px] py-[12px] rounded-[30px] cursor-pointer">
+                        <p>Learn More</p>
+                        <span class="ml-[10px]">→</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-[520px] bg-light-gray rounded-[16px] ">
+                <div class="w-full h-[300px] relative">
+                    <img src="Rectangle 177.png" class="w-full h-full object-cover" />
+                    <div
+                        class="absolute top-[0px] right-[0px] mt-[-20px] mr-[-20px] bg-[#0f2e2c] text-white text-center rounded-[8px] px-[14px] py-[10px]">
+                        <div class="text-[16px] font-bold ">16</div>
+                        <div class="text-[12px]">Dec</div>
+                    </div>
+                </div>
+                <div class="p-[30px]">
+                    <div class="text-[20px] font-bold text-[#111827] mb-[16px]">
+                        <p>Team Has Some Unique Feature - What Yours?</p>
+                    </div>
+                    <div class="text-[15px] text-[#6b7280]  mb-[25px]">
+                        <p>We understand how desperately you want to grow in the business world</p>
+                        <p>& our motto is to help you with practical idea and plan</p>
+                    </div>
+                    <div class="inline-flex items-center text-[#0f2e2c] text-[14px] font-medium cursor-pointer">
+                        <p>Learn More</p>
+                        <span class="ml-[10px]">→</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
     
 </body>
 </html>
