--- a/index.html
+++ b/index.html
@@ -290,6 +290,72 @@
         </div>
 
     </section>
-    
+    <footer class="w-full bg-[#c7d6d6] pt-[90px]">
+        <div class="text-center mb-[70px]">
+            <div class="text-[36px] font-bold text-[#0f172a]  mb-[10px]">
+                <p>Subscribe To Our Newsletter</p>
+            </div>
+            <div class="text-[36px] font-bold text-[#0f172a]  mb-[30px]">
+                <p>Get The Best Offers</p>
+            </div>
+
+            <div class="flex justify-center items-center gap-[20px]">
+                <div class="text-[14px] text-[#f97316]">
+                    <p> With One Click</p>
+                </div>
+
+                <div
+                    class="flex items-center bg-[#f97316] text-white text-[14px] font-medium px-[28px] py-[14px] rounded-[30px] cursor-pointer hover:opacity-90 transition">
+                    <p>Subscribe</p>
+                    <span class="ml-[10px]">→</span>
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-between px-[120px] pb-[60px]">
+            <div>
+                <div class="text-[24px] font-bold text-[#0f2e2c] mb-[6px]">
+                    <img src="Logo.png" alt="">
+                </div>
+                <div class="text-[12px] text-[#f97316]">
+                    <p> business consultancy agency</p>
+                </div>
+            </div>
+            <div class="flex gap-[50px] text-[14px] text-[#0f2e2c]">
+                <div class="">
+                    <p>About</p>
+                </div>
+                <div class="text-[#f97316]">Terms</div>
+                <div class="">
+                    <p>Blogs</p>
+                </div>
+                <div class="">
+                    <p>Contact</p>
+                </div>
+            </div>
+            <div class="text-[14px] text-[#0f2e2c] text-right">
+                <div>
+                    <p>+998 1276 234</p>
+                </div>
+                <div>
+                    <p>82/93 Boeind Street. NY</p>
+                </div>
+                <div>
+                    <p>info@amid.mail.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="w-full bg-[#0f2e2c] px-[120px] py-[18px] flex justify-between items-center">
+            <div class="text-[13px] text-white">
+                <p> All Rights Reserved @Debzui2020</p>
+            </div>
+            <div class="flex gap-[18px] text-white text-[14px]">
+                <img src="Vector (5).png" alt="">
+                <img src="Vector (6).png" alt="">
+                <img src="Vector (7).png" alt="">
+                <img src="Vector (8).png" alt="">
+                <img src="Vector (9).png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
